[package]
name = "extdot-impl"
description = "Please see `extdot` crate for actual usage"
version = "0.2.0"
authors = ["James Cassidy <qfire-vc@qfire.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qfire/extdot-impl"
documentation = "https://docs.rs/extdot-impl"
categories = ["parser-implementations","rust-patterns"]
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"
